--- a/sample/src/main/res/layout/list_item_num.xml
+++ b/sample/src/main/res/layout/list_item_num.xml
@@ -2,9 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="30dp"
+    android:paddingTop="30dp"
+    android:paddingBottom="30dp"
+    android:paddingLeft="10dp"
     android:background="@android:color/white"
-    android:gravity="center">
+    android:gravity="center_vertical">
 
     <TextView
         android:id="@+id/num"
