update divider color

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@android:color/holo_blue_light"
+    android:background="@android:color/holo_red_dark"
     tools:context="com.kevin.kgrecycleview.MainActivity">
 
     <android.support.v7.widget.Toolbar
