--- a/sample/src/main/res/layout/list_item_num.xml
+++ b/sample/src/main/res/layout/list_item_num.xml
@@ -13,5 +13,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1"
+        android:textColor="#ff0000"
         android:textSize="20sp" />
 </LinearLayout>
